Fixing alignment

--- a/components/candy/echo-hello-world/echo-hello-world.module.scss
+++ b/components/candy/echo-hello-world/echo-hello-world.module.scss
@@ -3,6 +3,7 @@ $speed: .15s;
 .container.container {
 	background: #000;
 	transition: all $speed ease-in-out;
+	min-width: 100px;
 	max-width: 360px;
 	filter: grayscale(100%);
 
@@ -17,6 +18,10 @@ $speed: .15s;
 		.gradient {
 			opacity: 1;
 		}
+	}
+
+	@media ( min-width: 480px ) {
+		width: 360px;
 	}
 }
 
