--- a/components/candy/wp-pixelated/wp-pixelated.module.scss
+++ b/components/candy/wp-pixelated/wp-pixelated.module.scss
@@ -28,6 +28,7 @@
 .wpPixelated {
 	margin: 0 auto;
 	max-width: 155px;
+	min-width: 93px;
 
 	path {
 		opacity: 0;
